added wordpress message in index.html

--- a/index.html
+++ b/index.html
@@ -366,4 +366,13 @@
         </script>
     </body>
 
+    <!-- Below is the html needed for Wordpress links to github projects -->
+    <!-- Add them to the text editor in WP -->
+    <!-- <a href="https://github.com/dcantoran/bakery-site" target="blank">
+        <i class="fab fa-github"
+            style="font-size: 2em; color: black;">
+        </i>
+    </a>
+    <br> -->
+
 </html>
