--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>Bakery Menu</title>
     <link rel="stylesheet" href="assets/css/menu.css">
     <script src="https://kit.fontawesome.com/5388789c70.js" crossorigin="anonymous"></script>
@@ -12,7 +13,6 @@
     <div id="page-wrapper">
         <section id="header">
             <div class="container">
-                <!-- Nav Bar -->
                 <div class="nav-area">
                     <div class="flex-nav">
                         <div class="top-nav">
@@ -20,26 +20,30 @@
                                 <li><a class="address"
                                         href="https://www.google.com/maps/place/Bakery/@41.2474905,-75.878164,17z/data=!3m1!4b1!4m5!3m4!1s0x89c51a5e2556c805:0xfaaef32955f81ab3!8m2!3d41.2474905!4d-75.8759753"
                                         target="_blank">
-                                        <span><i class="fas fa-location-arrow"></i> 160 N Washington St, Wilkes Barre</span>
+                                        <span><i class="fas fa-location-arrow"></i> 100 N Washington St, Wilkes Barre</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="tel:5558920234"
+                                    <a href="tel:1234567890"
                                         onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">
-                                        <p class="call-button"><i class="fas fa-phone-square"></i> (570) 823-4567</p>
+                                        <p class="call-button"><i class="fas fa-phone-square"></i> (123) 456-7890</p>
                                     </a>
                                 </li>
                                 <li><span><i class="fas fa-clock"></i> Mon-Sun: 6AM-7PM</span></li>
-                                <li><a href="https://www.facebook.com/Torres-Bakery-110797393956379/" target="_blank"><i
+                                <li><a href="#" target="_blank"><i
                                             class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fab fa-yelp"></i></a></li>
                             </ul>
                         </div>
                         <div class="bottom-nav">
+                            <input type="checkbox" id="check">
+                            <label for="check" class="checkBtn">
+                                <i class="fas fa-bars"></i>
+                            </label>
                             <div class="mn-nav left-logo">
                                 <ul class="site-logo">
-                                    <li><a class="logo" href="www.bake.com">Bakery</a></li>
+                                    <li><a class="logo" href="index.html">Bakery</a></li>
                                 </ul>
                             </div>
                             <div class="mn-nav options">
@@ -47,7 +51,7 @@
                                     <li><a class="home" href="index.html"><span>Home</span></a></li>
                                     <li><a class="menu" href="menu.html"><span>Menu</span></a></li>
                                     <li><a class="about" href="about.html"><span>About</span></a></li>
-                                    <li><a class="contact" href="contact.html"><span>Contact Us</span></a></li>
+                                    <li><a class="contact" href="contact.html"><span>Contact</span></a></li>
                                 </ul>
                             </div>
                         </div>
